Fix side nav bar toggle on small devices

--- a/css/main.css
+++ b/css/main.css
@@ -78,5 +78,7 @@ h6 {
 @media screen and (max-width:900px) {
   aside {
     width: 50%;
+    left: -37.5%;
+
   }
 }
